...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    ads:hintEnabled="false">

                    <MultiAutoCompleteTextView
                        android:id="@+id/message_input_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/armata"
                        android:hint="@string/activity_chat_type_post"
                        android:inputType="textMultiLine"
                        android:padding="3dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/button_send_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1.5"
                    android:clickable="true"
                    android:contentDescription="@string/activity_send_image_button"
...
