...
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/primary"/>

                <TextView
                    android:id="@+id/message_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:layout_marginTop="2dp"
                    android:textIsSelectable="true"
...
