...
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/imageView5"
                                app:layout_constraintTop_toBottomOf="@+id/textView6" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/button_update_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="40dp"
                            android:onClick="goToEditProfileActivity"
                            android:text="@string/activity_profile_icon_modify_account"
...
